2002-06-16  Derek Atkins   <derek@ihtfp.com>

	Integrate the tax table into the gncEntry object; change how taxes
	and discounts are computed, stored, and returned.  Fix the Entry
	XML code to save/load the new taxtable data (not backwards
	compatible).  Integrate new changes into the entry-ledger.

	fix some bugs in the business xml code.  fix some memory leaks.

2002-06-14  Derek Atkins   <derek@ihtfp.com>

	* business-core/file/gnc-tax-table-xml-v2.*: Create a preliminary
	xml implementation for storing tax tables.

	* business-core/gncTaxTable*: Create a preliminary implementation
	of Tax Tables.  They are currently not saved, and nothing uses
	them.  Link the initialization into the module.

	* business-gnome/dialog-tax-table*: Create a tax table GUI to
	create and edit tax tables.  G-wrap the editor-window create
	routine.

	* business-gnome.scm: add the Tax Table gui; rename the 'Invoice'
	option page to "Business".  Fix dialog-invoice to use the new
	option name.
	
2002-06-11  David Hampton  <hampton@employees.org>

	* src/gnome/druid-stock-split.c: Add automatic focusing on a
	couple of the druid pages.

	* src/gnome/window-acct-tree.c: Fix a compile of broken menu
	items.  Only enable the reconcile menu item when an account has
	been selected.

2002-06-10  David Hampton  <hampton@employees.org>

	* src/gnome/window-main.c: Update the view items to use
	gtkcheckmenuitems instead of having separate show and hide menu
	items.  Also flip the order of the Summary and Status menu items
	so that the menu order reflects the items order within the window.

2002-06-09  David Hampton  <hampton@employees.org>

	* src/gnome/window-acct-tree.c: Remove the 'tax information' item
	from the account window pop-up menu.

	* src/gnome/glade/price.glade:
	* src/gnome/dialog-price-editor.c: Set up all fields so that the
	Enter key triggers the OK button.

	* src/gnome/glade/price.glade:
	* src/gnome/dialog-price-edit-db.c: Sort the database by clicking