@@ -6,6 +6,7 @@
 (gnc:module-load "gnucash/business-core" 0)
 (gnc:module-load "gnucash/gnome-search" 0)
 (gnc:module-load "gnucash/business-core-file" 0)
+(gnc:module-load "gnucash/dialog-tax-table" 0)
 
 (define top-level "_Business")
 (define new-label "New")
