@@ -1,0 +1,14 @@
+gladedir = $(GNC_GLADE_DIR)
+glade_DATA = \
+  customer.glade \
+  date-close.glade \
+  employee.glade \
+  invoice.glade \
+  job.glade \
+  order.glade \
+  payment.glade \
+  vendor.glade
+
+EXTRA_DIST = \
+  .cvsignore \
+  ${glade_DATA}
