@@ -20,6 +20,7 @@
 #include "messages.h"
 #include "table-allgui.h"
 #include "pricecell.h"
+#include "dialog-tax-table.h"
 
 #include "gncEntryLedgerP.h"
 #include "gncEntryLedgerControl.h"
@@ -341,7 +342,7 @@ static gboolean gnc_entry_ledger_traverse (VirtualLocation *p_new_virt_loc,
 
     ledger->full_refresh = FALSE;
 
-    //    table = gnc_ui_new_tax_table_from_name (name); XXX
+    table = gnc_ui_tax_table_new_from_name (ledger->book, name);
     if (!table)
       break;
 
