@@ -1,0 +1,2 @@
+(define-module (gnucash dialog-tax-table))
+(use-modules (g-wrapped gw-dialog-tax-table))
